--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,9 +10,11 @@
     "editor.defaultFormatter": "JuanBlanco.solidity"
   },
   "solidity.remappings": [
+    "@openzeppelin/contracts/=dependencies/@openzeppelin-contracts-5.3.0/",
     "@openzeppelin-contracts-5.3.0/=dependencies/@openzeppelin-contracts-5.3.0/",
-    "forge-std/=dependencies/forge-std-1.9.6/src/",
-    "olympus-v3-3.0.0/=dependencies/olympus-v3-3.0.0/",
-    "solmate-6.8.0/=dependencies/solmate-6.8.0/"
+    "forge-std-1.9.6/=dependencies/forge-std-1.9.6/src/",
+    "@solady/=dependencies/solady-0.1.19/",
+    "solady-0.1.19/=dependencies/solady-0.1.19/src/",
+    "solmate-6.8.0/=dependencies/solmate-6.8.0/src/"
   ]
 }
