--- a/abis/CallistoTreasury.json
+++ b/abis/CallistoTreasury.json
@@ -318,6 +318,17 @@
   },
   {
     "type": "error",
+    "name": "SafeERC20FailedOperation",
+    "inputs": [
+      {
+        "name": "token",
+        "type": "address",
+        "internalType": "address"
+      }
+    ]
+  },
+  {
+    "type": "error",
     "name": "TRSRY_NotActive",
     "inputs": []
   }
