--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
   "scripts": {
     "setup": "pnpm i && pnpm tsx setup.ts",
     "generate-abi": "pnpm i && pnpm tsx setup.ts generate-abi",
-    "size": "forge build --sizes src/policies/CallistoVault.sol src/external/",
+    "size": "forge build --sizes src/policies/ src/external/",
     "test": "forge test",
     "coverage": "pnpm tsx setup.ts coverage",
     "lcov": "forge coverage --no-match-coverage='test/|script/' --ir-minimum --report lcov",
     "lint": "pre-commit run --all-files",
-    "slither": "slither --filter-paths '(dependencies/|node_modules/|lib/)' .",
+    "slither": "slither --filter-paths '(dependencies/|node_modules/|lib/)' --exclude naming-convention,timestamp,reentrancy-events .",
     "snapshot": "forge s",
     "diff": "forge s --diff",
     "coverage:ci": "pnpm tsx setup.ts coverage-ci",
@@ -24,12 +24,12 @@
   },
   "devDependencies": {
     "@types/fs-extra": "^11.0.4",
-    "@types/node": "^24.0.0",
+    "@types/node": "^24.3.0",
     "commander": "^14.0.0",
     "execa": "^9.6.0",
-    "fs-extra": "^11.3.0",
+    "fs-extra": "^11.3.1",
     "husky": "^9.1.7",
     "prettier": "^3.6.2",
-    "tsx": "^4.19.4"
+    "tsx": "^4.20.4"
   }
 }
